# engine-contracts

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: policy-table.md  upstream-references.md
results/: policy_table.json  pycantonese_segmentation.json  stanza_pretokenized.json  wave2vec_dictionary.json  whisper_tokenizer.json
src/engine_contracts/: __init__.py  policy.py  types.py
src/engine_contracts/probes/: __init__.py  pycantonese.py  stanza.py  wave2vec.py  whisper.py
tests/: conftest.py  test_pycantonese_contract.py  test_stanza_contract.py  test_wave2vec_contract.py  test_whisper_contract.py
