[project]
name = "engine-contracts"
version = "0.1.0"
description = "Text input contract probes and tests for TalkBank NLP engines"
readme = "CLAUDE.md"
requires-python = ">=3.12,<3.14"
license = { text = "MIT" }

dependencies = [
    # Core — always needed
    "pydantic>=2.0",
]

[project.optional-dependencies]
# Engine groups — install only what you need to probe
wave2vec = ["torchaudio>=2.0", "torch>=2.0"]
whisper = ["openai-whisper>=20230314"]
stanza = ["stanza>=1.9"]
pycantonese = ["pycantonese>=3.4"]
seamless = ["transformers>=4.35", "sentencepiece>=0.1"]

# All engines at once
all = [
    "engine-contracts[wave2vec]",
    "engine-contracts[whisper]",
    "engine-contracts[stanza]",
    "engine-contracts[pycantonese]",
    "engine-contracts[seamless]",
]

[dependency-groups]
dev = [
    "engine-contracts[all]",
    "pytest>=8.0",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/engine_contracts"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "probe: Engine introspection probes (slow, loads ML models)",
    "contract: Contract tests against committed baselines (fast).",
]
# Default: skip probes unless explicitly requested
addopts = "-m 'not probe'"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_any_generics = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
    "torchaudio.*",
    "torch.*",
    "whisper.*",
    "stanza.*",
    "pycantonese.*",
    "transformers.*",
    "sentencepiece.*",
]
ignore_missing_imports = true
